<resources>
    <!-- Snackbar -->
    <string name="no_internet_connection">You need to connect with internet!</string>
    <string name="problems_get_data">Problems with getting data. Error code: %1$s</string>
    <string name="timeout">Bad internet connection. Try again!</string>
    <string name="unknown_host">Server connection problems. Try again!</string>
    <string name="unknown_error">Unknown error</string>
    <string name="retry">Retry</string>
    <!-- User Profile Screen -->
    <string name="created_date">Created: %1$s</string>
    <string name="public_repositories">Public repositories:</string>
    <string name="no_public_repositories">No public repositories</string>
    <!-- Repository Info Screen -->
    <string name="description_header">Description</string>
    <string name="language_header">Language</string>
    <string name="size_header">Size</string>
    <string name="created_date_header">Created</string>
    <string name="updated_date_header">Updated</string>
    <string name="pushed_date_header">Pushed</string>
    <string name="link_to_repository_header">Link</string>
    <string name="to_close">To close</string>
    <!-- Preference Titles -->
    <string name="settings_app_header">Appearance settings</string>
    <string name="number_of_results_header">Number of results</string>
    <string name="since_header">Since</string>
    <!-- Messages Preferences -->
    <string name="dark_mode_title">Dark mode</string>
    <string name="sorting_title">Sorting</string>
    <!-- Preference Keys  -->
    <string name="dark_mode_key">dark_mode_key</string>
    <string name="number_of_results_key">number_of_results_key</string>
    <string name="since_key">since_key</string>
    <string name="error_loading">Error loading!</string>
</resources>